--- a/public/css/game.css
+++ b/public/css/game.css
@@ -6,8 +6,29 @@
 
 @font-face {
     font-family: "mhf";
-    src: url('../fonts/michellehandwritting.ttf') format("opentype");;
+    src: url('../fonts/michellehandwritting.ttf') format("opentype");
+    ;
 }
+
+::-webkit-scrollbar {
+    width: 18px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--tileColor);
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+}
+
 
 body {
     background-color: var(--backPanelColor);
@@ -28,7 +49,18 @@ body {
 
 /*-------*/
 
-.letterDisplay{
+.urlDisplay {
+    border: black;
+    border-style: solid;
+    border-radius: 5px;
+    box-shadow: cadetblue;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.letterDisplay {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -38,7 +70,7 @@ body {
     padding: 1rem;
 }
 
-.playerDisplay{
+.playerDisplay {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,11 +89,17 @@ body {
 }
 
 .noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Old versions of Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Old versions of Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
-  }
+}
